@@ -9,6 +9,11 @@ Version 2.5.0 beta1
 - The default of the ``/2/instances/[instance_name]/rename`` RAPI
   resource's ``ip_check`` parameter changed from ``True`` to ``False``
   to match the underlying LUXI interface
+- The ``/2/nodes/[node_name]/evacuate`` RAPI resource was changed to use
+  body parameters, see :doc:`RAPI documentation <rapi>`. The server does
+  not maintain backwards-compatibility as the underlying operation
+  changed in an incompatible way. The RAPI client can talk to old
+  servers, but it needs to be told so as the return value changed.
 - When creating file-based instances via RAPI, the ``file_driver``
   parameter no longer defaults to ``loop`` and must be specified
 - The deprecated "bridge" nic parameter is no longer supported. Use
